@@ -1,3 +1,9 @@
+2008-11-03  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/ttk/ttkEntry.c: fix warning: unused variable `currentValue'
+	* generic/tkOldTest.c:    fix warning: assignment discards qualifiers
+	                          from pointer target type
+
 2008-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tests/winClipboard.test: testclipboard no longer returns strings
